# kajit

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  DEVELOP.md  KAJIT_MIR_MCP.md  README.md
kajit/: Cargo.toml
kajit-ir/: Cargo.toml
kajit-ir-text/: Cargo.toml
kajit-ir-text/src/: ir_parse.rs  lib.rs
kajit-ir/src/: error.rs  ir.rs  ir_passes.rs  lib.rs  verify.rs
kajit-mir/: Cargo.toml
kajit-mir-mcp/: Cargo.toml
kajit-mir-mcp/src/: main.rs
kajit-mir-text/: Cargo.toml
kajit-mir-text/src/: cfg_mir_parse.rs  lib.rs  regalloc_mir_parse.rs
kajit-mir/src/: cfg_mir.rs  debug_cli.rs  debugger.rs  interpreter.rs  intrinsic_calls.rs  lib.rs  minimizer.rs  regalloc_engine.rs  regalloc_mir.rs
kajit/benches/: canada.rs  citm_catalog.rs  synthetic.rs  twitter.rs
kajit/benches/common/: bench_macros.rs
kajit/examples/: bench_report.rs
kajit/src/: compiler.rs  context.rs  disasm_normalize.rs  disasm_tests.rs  format.rs  intrinsics.rs  ir.rs  ir_backend.rs  ir_backend_aarch64.rs  ir_backend_x64.rs  ir_parse.rs  ir_passes.rs  jit_debug.rs  jit_dwarf.rs  json.rs  json_intrinsics.rs  lib.rs  linearize.rs  pipeline_opts.rs  postcard.rs  recipe.rs  regalloc_engine.rs  regalloc_mir.rs  regalloc_mir_parse.rs
kajit/src/arch/: aarch64.rs  x64.rs
kajit/src/backends/: mod.rs  parallel_moves.rs
kajit/src/backends/aarch64/: alloc.rs  (+4 more)
kajit/src/snapshots/: kajit__disasm_tests__disasm_json_all_scalars_aarch64.snap  kajit__disasm_tests__disasm_json_all_scalars_x86_64.snap  kajit__disasm_tests__disasm_json_flatten_aarch64.snap  kajit__disasm_tests__disasm_json_nested_struct_aarch64.snap  kajit__disasm_tests__disasm_json_nested_struct_x86_64.snap  kajit__disasm_tests__disasm_json_vec_aarch64.snap  kajit__disasm_tests__disasm_postcard_all_scalars_aarch64.snap  kajit__disasm_tests__disasm_postcard_all_scalars_x86_64.snap  kajit__disasm_tests__disasm_postcard_enum_external_aarch64.snap  kajit__disasm_tests__disasm_postcard_enum_external_x86_64.snap  kajit__disasm_tests__disasm_postcard_flatten_aarch64.snap  kajit__disasm_tests__disasm_postcard_flatten_x86_64.snap  kajit__disasm_tests__disasm_postcard_nested_struct_aarch64.snap  kajit__disasm_tests__disasm_postcard_nested_struct_x86_64.snap  kajit__disasm_tests__disasm_postcard_option_aarch64.snap  kajit__disasm_tests__disasm_postcard_option_x86_64.snap  kajit__disasm_tests__disasm_postcard_vec_aarch64.snap  kajit__ir_backend__tests__linear_ir_micro_linear_ir_micro_const_u32_x86_64.snap  kajit__ir_backend__tests__linear_ir_micro_linear_ir_micro_gamma_u32_x86_64.snap  kajit__ir_backend__tests__linear_ir_micro_linear_ir_micro_intrinsic_u64_x86_64.snap  kajit__ir_backend__tests__linear_ir_micro_linear_ir_micro_read_u32_x86_64.snap  kajit__ir_backend_aarch64__tests__linear_ir_micro_linear_ir_micro_const_u32_aarch64.snap  kajit__ir_backend_aarch64__tests__linear_ir_micro_linear_ir_micro_gamma_u32_aarch64.snap  kajit__ir_backend_aarch64__tests__linear_ir_micro_linear_ir_micro_intrinsic_u64_aarch64.snap  kajit__ir_backend_aarch64__tests__linear_ir_micro_linear_ir_micro_read_u32_aarch64.snap
kajit/tests/: corpus.rs  generated_ir_behavior_corpus.rs  generated_ir_opt_corpus.rs  generated_ir_postreg_corpus.rs  generated_synthetic.rs  ir_text_regression.rs  manual_format_behavior.rs  mir_differential_regression.rs  mir_text_regression.rs  postreg_vec_hotpath_corpus.rs  regalloc_differential_vec_u32.rs  text_compile_run_regression.rs  theta_hoist_min_repro.rs
kajit/tests/snapshots/: corpus__generated_postreg_disasm_json_all_integers_aarch64.snap  corpus__generated_postreg_disasm_json_all_scalars_aarch64.snap  corpus__generated_postreg_disasm_json_array_u32_4_aarch64.snap  corpus__generated_postreg_disasm_json_bool_field_aarch64.snap  corpus__generated_postreg_disasm_json_bool_true_false_aarch64.snap  corpus__generated_postreg_disasm_json_deep_struct_aarch64.snap  corpus__generated_postreg_disasm_json_deny_unknown_fields_aarch64.snap  corpus__generated_postreg_disasm_json_flat_struct_aarch64.snap  corpus__generated_postreg_disasm_json_flatten_aarch64.snap  corpus__generated_postreg_disasm_json_integer_boundaries_aarch64.snap  corpus__generated_postreg_disasm_json_nested_struct_aarch64.snap  corpus__generated_postreg_disasm_json_rename_field_aarch64.snap  corpus__generated_postreg_disasm_json_scalar_u64__v0_aarch64.snap  corpus__generated_postreg_disasm_json_shared_inner_type_aarch64.snap  corpus__generated_postreg_disasm_json_transparent_composite_aarch64.snap  corpus__generated_postreg_disasm_json_transparent_string_aarch64.snap  corpus__generated_postreg_disasm_json_tuple_nested_aarch64.snap  corpus__generated_postreg_disasm_json_tuple_pair_aarch64.snap  corpus__generated_postreg_disasm_json_tuple_triple_aarch64.snap  corpus__generated_postreg_disasm_json_unit_field_aarch64.snap  corpus__generated_postreg_disasm_json_vec_nested_struct_aarch64.snap  corpus__generated_postreg_disasm_json_vec_scalar_large_aarch64.snap  corpus__generated_postreg_disasm_postcard_all_integers_aarch64.snap  corpus__generated_postreg_disasm_postcard_all_scalars_aarch64.snap  corpus__generated_postreg_disasm_postcard_array_u32_4_aarch64.snap  corpus__generated_postreg_disasm_postcard_bool_true_false_aarch64.snap  corpus__generated_postreg_disasm_postcard_default_field_aarch64.snap  corpus__generated_postreg_disasm_postcard_deny_unknown_fields_aarch64.snap  (+365 more)
xtask/: Cargo.toml
xtask/src/: cases.rs  ir_behavior_cases.rs  ir_opt_cases.rs  ir_postreg_cases.rs  main.rs
(+58 files in other folders)
