[package]
name = "kajit-ir-text"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
kajit-ir = { path = "../kajit-ir" }
chumsky = "1.0.0-alpha.8"
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
