[package]
name = "kajit-mir-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
kajit-mir = { path = "../kajit-mir" }
kajit-mir-text = { path = "../kajit-mir-text" }
rust-mcp-schema = { version = "0.9.5", default-features = false, features = [
  "2025_11_25",
  "schema_utils",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
