[package]
name = "kajit-mir-mcp"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
kajit-mir = { path = "../kajit-mir" }
kajit-mir-text = { path = "../kajit-mir-text" }
rust-mcp-sdk = { version = "0.8", default-features = false, features = [
  "stdio",
  "server",
  "macros",
] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
