[package]
name = "kajit-mir-text"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
kajit-ir = { path = "../kajit-ir" }
kajit-lir = { path = "../kajit-lir" }
kajit-mir = { path = "../kajit-mir" }
chumsky = "1.0.0-alpha.8"

[dev-dependencies]
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
