[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
kajit = { path = "../kajit" }
kajit-mir = { path = "../kajit-mir" }
kajit-mir-text = { path = "../kajit-mir-text" }
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
